--- a/index.css
+++ b/index.css
@@ -113,7 +113,7 @@ span {
 .project-preview {
   display: block;
   height: 200px;
-  width: auto;
+  width: 200px;
   border: 3px solid black;
   float: left;
 }
