--- a/index.css
+++ b/index.css
@@ -92,6 +92,10 @@ main {
   font-size: 93px;
 }
 
+.skill div {
+  width: 100px;
+}
+
 .projects {
   margin: 20px auto;
   max-width: 700px;
@@ -214,6 +218,12 @@ main {
     width: 500px;
     margin: auto;
   }
+
+  .project-description {
+    padding-left: 0;
+    padding-top: 20px;
+  }
+
 }
 
 @media (max-width: 625px) {
