--- a/index.css
+++ b/index.css
@@ -42,19 +42,16 @@ span {
   font-weight: 700;
   box-sizing: border-box;
   text-align: center;
-  height: 350px;
   width: 100%;
-  padding-top: 50px;
+  padding: 20px;
   color: white;
-  background: gray;
-  background-image: url("http://o.homedsgn.com/wp-content/uploads/2011/04/NYC-at-Night-06.jpg");
+  background: rgba(255,105,180, 0.7);
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .hello {
-  padding-top: 25px;
-  font-size: 100px;
+  font-size: 80px;
   text-transform: uppercase;
 }
 
@@ -70,15 +67,14 @@ main {
 
 .about-me section {
   float: left;
-  width: 360px;
-  padding-left: 20px;
 }
 
 .me {
-  width: 300px;
+  width: 130px;
+  border-radius: 50%;
   height: auto;
   display: block;
-  float: left;
+  margin: auto;
 }
 
 .about-me h3 {
@@ -183,8 +179,21 @@ main {
 
 .social {
   width: 132px;
-  margin: 20px auto;
+  margin: auto;
+  margin-top: 20px;
   border-left: 0;
+}
+
+.social > li:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  overflow: hidden;
+}
+
+.social > li:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  overflow: hidden;
 }
 
 .social li {
@@ -230,7 +239,6 @@ main {
 @media (max-width: 800px) {
   .hello {
     font-size: 75px;
-    padding-top: 45px;
   }
 
   .skills-list {
@@ -248,7 +256,6 @@ main {
 @media (max-width: 625px) {
   .hello {
     font-size: 45px;
-    padding-top: 55px;
   }
 
   .project-description {
