--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ span {
   width: 100%;
   padding: 20px;
   color: white;
-  background: rgba(255,105,180, 0.7);
+  background: aquamarine;
   background-size: cover;
   background-repeat: no-repeat;
 }
