--- a/index.css
+++ b/index.css
@@ -90,6 +90,10 @@ main {
   max-width: 700px;
 }
 
+.skills-list {
+  margin: 20px auto;
+}
+
 .skill:first-child {
   padding-left: 0;
 }
@@ -97,9 +101,8 @@ main {
 .skill {
   float: left;
   text-align: center;
-  padding-right: 20px;
-  padding-top: 20px;
-  font-size: 93px;
+  padding-right: 40px;
+  font-size: 100px;
 }
 
 .skill div {
