--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ span {
   width: 100%;
   padding: 20px;
   color: white;
-  background: rgb(35,35,35);
+  background: hotpink;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -190,7 +190,7 @@ main {
 }
 
 .social {
-  width: 132px;
+  width: 44px;
   margin: auto;
   margin-top: 20px;
   border-left: 0;
